# raspberry-pi-shop

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  startup.sh
server/: .gitignore  pyproject.toml
server/api/: settings.py  urls.py
server/api/services/: cron.py
server/api/services/crawl/: settings.py
server/cart/: urls.py  views.py
server/cart/services/: Cart.py
server/components/: models.py  serializers.py  urls.py  utils.py  views.py
server/components/migrations/: 0001_initial.py  0002_categories_description.py  0002_component_store_id.py  0003_rename_component_components.py  0003_rename_store_id_component_store.py  0004_categories_display_name.py  0005_alter_categories_display_name.py  0006_rename_category_component_category_id_and_more.py
server/crawl/: apps.py
server/crawl/crawl/: crawlable.py  items.py  pipelines.py  settings.py
server/crawlers/: middlewares.py  settings.py
server/orders/: apps.py  models.py  urls.py  views.py
server/orders/migrations/: 0001_initial.py  0002_rename_order_id_orderinfo_order_and_more.py
server/server/: asgi.py  constants.py  crons.py  renderers.py  settings.py  urls.py  wsgi.py
server/server/fixtures/: categories.json  stores.json
server/server/middleware/: CartMiddleware.py
server/server/scripts/: choose_featured.py
server/stores/: models.py  serializers.py  utils.py
server/stores/migrations/: 0001_add_stores_table.py  0001_initial.py  0002_rename_store_stores.py  0002_rename_stores_table.py  0003_rename_stores_table.py
(+59 files in other folders)
